リンク名修正・imageタグ修正等

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <a href="src/glass-filter.html">ガラス風フィルター</a>
   </li>
   <li>
-    <a href="src/distortion-filter.html">ゆがみフィルター</a>
+    <a href="src/distortion-filter.html">ゆれフィルター</a>
   </li>
   <li>
-    <a href="src/paper-filter.html">紙っぽいフィルター</a>
+    <a href="src/paper-filter.html">和紙っぽいフィルター</a>
   </li>
   <li>
     <a href="src/posterization-filter.html">ポスタリゼーション</a>
