--- a/src/pixel-art-filter.html
+++ b/src/pixel-art-filter.html
@@ -15,7 +15,7 @@
 <p>imgタグで描画</p>
 <img src="images/image-1.jpg" width="512" height="384" alt="" class="image">
 
-<p>svgのimageタグで描画</p>
+<p>SVGのimageタグで描画</p>
 <svg width="512" height="384" xmlns="http://www.w3.org/2000/svg">
   <image href="images/image-1.jpg" width="100%" height="100%" class="image"/>
 </svg>
