--- a/src/stripe-filter.html
+++ b/src/stripe-filter.html
@@ -7,15 +7,26 @@
   <link rel="stylesheet" href="style.css"/>
   <style>
     .image {
-      display: block;
       filter: url(#filter);
     }
   </style>
 </head>
 <body>
+<p>imgタグで描画</p>
 <img src="images/image-1.jpg" width="512" height="384" alt="" class="image">
-<img src="images/image-2.jpg" width="480" height="640" alt="" class="image">
-<img src="images/image-3.jpg" width="512" height="512" alt="" class="image">
+
+<p>SVGのimageタグで描画</p>
+<svg width="512" height="384" xmlns="http://www.w3.org/2000/svg">
+  <image href="images/image-1.jpg" width="100%" height="100%" class="image"/>
+</svg>
+
+<svg width="480" height="640" xmlns="http://www.w3.org/2000/svg">
+  <image href="images/image-2.jpg" width="100%" height="100%" class="image"/>
+</svg>
+
+<svg width="512" height="512" xmlns="http://www.w3.org/2000/svg">
+  <image href="images/image-3.jpg" width="100%" height="100%" class="image"/>
+</svg>
 
 <!-- フィルター -->
 <svg width="0" height="0" xmlns="http://www.w3.org/2000/svg">
